--- a/html/contact.html
+++ b/html/contact.html
@@ -180,7 +180,7 @@
     <!-- ============================================ -->
 
     <section id="valley-form" class="container">
-        <form id="contact" name="Contact Form" method="post" data-netlify="true">
+        <form id="contact" name="Contact Form" method="post" data-netlify-recaptcha="true" data-netlify="true">
             <h3 class="contact-topper"><span>DROP</span> A LINE</h3>
             
                 <input aria-label="name" name="name" placeholder="Your name" type="text" tabindex="1" required>
@@ -188,7 +188,7 @@
                 <input aria-label="phone number" name="phone" placeholder="Your Phone Number" type="tel" tabindex="3" required>
                 <input aria-label="enter company name" name="company" placeholder="Your Company" type="text" tabindex="3" required>
                 <textarea aria-label="write your message" name="message" placeholder="Type your Message Here...." tabindex="5" required></textarea>
-          
+            <div data-netlify-recaptcha="true"></div>
             <p class="form-submit">
                 <button name="submit" type="submit" id="contact-submit" class="primary" data-submit="...Sending">Submit</button>
             </p>
