added 2021 and compensation

--- a/html/inside-sales.html
+++ b/html/inside-sales.html
@@ -185,6 +185,7 @@
 
     <section id="job-description" class="container container2">
         <img src="/images/vcs-black.png" alt="valley construction logo" width="200px">
+        <h2>Compensation: Competitive base salary + commission / DOE, and benefits</h2>
         <p>Want to be part of a team where we value hard work and dedication and have a 
            culture that rewards you with growth, development and internal promotions?  Do 
            you work well with others and are able to work in a fast-paced environment?  
@@ -204,7 +205,7 @@
             <li>Understand customer needs and requirements.</li>
             <li>Route qualified opportunities to the appropriate sales executives for further development and closure.</li>
             <li>Maintain and expand your database of prospects within your assigned territory.</li>
-            <li>Working closely with the Inside Sales Staff to provide support by relieving them of 
+            <li>Working closely with the Outside Sales Staff to provide support by relieving them of 
                 administrative work. Duties may include order processing/entry, making price quotations, 
                 record keeping, RFP response, product training, or other related tasks. </li>
             <li>Working closely with the purchasing manager to ensure all info is correct before purchasing/creating the sales order’s.</li>
@@ -312,7 +313,7 @@
         <div class="branding">
             <div aria-hidden="true" class="branding-line"></div>
             <p>Developed By <span><a href="https://www.oakharborwebdesigns.com/">Oak Harbor Web Designs</a></span></p>
-            <p>Copyright &copy 2020</p>
+            <p>Copyright &copy 2021</p>
         </div>
     </div>
 </footer>
