--- a/html/outside-sales.html
+++ b/html/outside-sales.html
@@ -185,6 +185,7 @@
 
     <section id="job-description" class="container container2">
         <img src="/images/vcs-black.png" alt="valley construction logo" width="200px">
+        <h2>Compensation: competitive base salary + commission / DOE, and beneifts</h2>
         <p>Want to be part of a team where we value hard work and dedication and have a 
            culture that rewards you with growth, development and internal promotions?  Do 
            you work well with others and are able to work in a fast-paced environment?  
@@ -312,7 +313,7 @@
         <div class="branding">
             <div aria-hidden="true" class="branding-line"></div>
             <p>Developed By <span><a href="https://www.oakharborwebdesigns.com/">Oak Harbor Web Designs</a></span></p>
-            <p>Copyright &copy 2020</p>
+            <p>Copyright &copy 2021</p>
         </div>
     </div>
 </footer>
