--- a/html/warehouse-driver.html
+++ b/html/warehouse-driver.html
@@ -185,7 +185,7 @@
 
     <section id="job-description" class="container container2">
         <img src="/images/vcs-black.png" alt="valley construction logo" width="200px">
-        <h2>Driver Compensation: $18 - $23 and hour</h2>
+        <h2>Driver Compensation: $18 - $23 an hour</h2>
         <p>Want to be part of a team where we value hard work and dedication and have a 
            culture that rewards you with growth, development and internal promotions?  Do 
            you work well with others and are able to work in a fast-paced environment?  
