added additional content

--- a/html/nds.html
+++ b/html/nds.html
@@ -194,7 +194,7 @@
             <h2><span>M.A.P.</span> System </h2>
             <p>Valley Construction Supply is a major wholesaler and supplier for Maxwell Airtight Products (M.A.P.) in the Seattle and Pacific Northwest market. Maxwell is most famous for their cassette tapes but have been manufacturing and selling air-tight and flashing products for decades.<br><br>
 
-               We carry their <strong>air sealer, pipe and wall sealer, and flashing tape products </strong>which are single adhesive tapes that make sheathing joints airtight and waterproof that is easier to use and produces less waste than other sealing products on the market.<br><br>
+               We carry their <strong>air sealing, pipe and wall sealing, and flashing tape products </strong>which are single adhesive tapes that make sheathing joints airtight and waterproof that is easier to use and produces less waste than other sealing products on the market.<br><br>
 
                Maxwell Airtight Products (M.A.P.) has been a major contributer in the construction industry by creating products with incredible efficiency, workability, and environmental impacts from their design to their produciton and sale. 
             </p>
@@ -220,28 +220,6 @@
             <h3>Insulation Board Joint</h3>
             <p>Create and air-tight seal between insulation boards.</p>
         </div>
-    </section>
-
-    <!-- ============================================ -->
-    <!--                     REBAR                    -->
-    <!-- ============================================ -->
-
-    <section id="about-rebar" class="container container2 pipe">
-        <div class="rebar-group group2">
-            <h2><span>Pipe & Wall</span> Sealing Products </h2>
-            <p>Valley also carries the Maxwell line of pipe and wall sealer products that creates an air-tight and waterproof adhesive sheet to be applied to pipes that pass through building's walls and to the outside.<br><br>
-            </p>
-            <ol>
-                <li>There is pipe penetration through the wall.</li>
-                <li>Put Pipe & Wall Sealer on the pipe.</li>
-                <li>Peel off the release paper</li>
-                <li>Apply the pressure by hand or roller.</li>
-            </ol>
-            <button class="solid rebar-contact" onclick="location.href='contact.html'">
-                CONTACT VALLEY
-            </button>
-        </div>
-        <img id="group2" src="/images/pipe.png" alt="rebar fabrication facility" width="450px">
     </section>
 
     <!-- ============================================ -->
