--- a/html/map-system.html
+++ b/html/map-system.html
@@ -53,7 +53,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Maxwell Airtight Products | Seattle WA</title>
+    <title>Maxell Airtight Products | Seattle WA</title>
 </head>
 
 <body>
@@ -177,7 +177,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>Maxwell Airtight Products Sealing Line</h1>
+                <h1>Maxell Airtight Products Sealing Line</h1>
                 
             </div>
         </div>
@@ -192,11 +192,11 @@
         <img src="/images/maps.jpg" alt="rebar fabrication facility" width="450px">
         <div class="rebar-group">
             <h2><span>M.A.P.</span> System </h2>
-            <p>Valley Construction Supply is a major wholesaler and supplier for Maxwell Airtight Products (M.A.P.) in the Seattle and Pacific Northwest market. Maxwell is most famous for their cassette tapes but have been manufacturing and selling air-tight and flashing products for decades.<br><br>
+            <p>Valley Construction Supply is a major wholesaler and supplier for Maxell Airtight Products (M.A.P.) in the Seattle and Pacific Northwest market. Maxell is most famous for their cassette tapes but have been manufacturing and selling air-tight and flashing products for decades.<br><br>
 
                We carry their <strong>air sealer, pipe and wall sealer, and flashing tape products </strong>which are single adhesive tapes that make sheathing joints airtight and waterproof that is easier to use and produces less waste than other sealing products on the market.<br><br>
 
-               Maxwell Airtight Products (M.A.P.) has been a major contributer in the construction industry by creating products with incredible efficiency, workability, and environmental impacts from their design to their produciton and sale. 
+               Maxell Airtight Products (M.A.P.) has been a major contributer in the construction industry by creating products with incredible efficiency, workability, and environmental impacts from their design to their produciton and sale. 
             </p>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VALLEY
@@ -229,7 +229,7 @@
     <section id="about-rebar" class="container container2 pipe">
         <div class="rebar-group group2">
             <h2><span>Pipe & Wall</span> Sealing Products </h2>
-            <p>Valley also carries the Maxwell line of pipe and wall sealer products that creates an air-tight and waterproof adhesive sheet to be applied to pipes that pass through building's walls and to the outside.<br><br>
+            <p>Valley also carries the Maxell line of pipe and wall sealer products that creates an air-tight and waterproof adhesive sheet to be applied to pipes that pass through building's walls and to the outside.<br><br>
             </p>
             <ol>
                 <li>There is pipe penetration through the wall.</li>
