--- a/html/map-system.html
+++ b/html/map-system.html
@@ -192,15 +192,29 @@
         <img src="/images/maps.jpg" alt="rebar fabrication facility" width="450px">
         <div class="rebar-group">
             <h2><span>M.A.P.</span> System </h2>
-            <p>Valley Construction Supply is a major wholesaler and supplier for Maxell Airtight Products (M.A.P.) in the Seattle and Pacific Northwest market. Maxell is most famous for their cassette tapes but have been manufacturing and selling air-tight and flashing products for decades.<br><br>
+            <p>Valley Construction Supply is a major wholesaler and supplier for Maxell Airtight Products (M.A.P.) in the Seattle and Pacific Northwest market.<br><br>
 
-               We carry their <strong>air sealer, pipe and wall sealer, and flashing tape products </strong>which are single adhesive tapes that make sheathing joints airtight and waterproof that is easier to use and produces less waste than other sealing products on the market.<br><br>
+               We carry their air sealer, pipe and wall sealer, and flashing tape products which are all-rubber, single <strong>self adhesive tapes</strong> that make sheathing joints airtight and waterproof in fewer steps.<br><br>
+
+               The MAP System is easier to use and produces less waste than other sealing products on the market which need to be nailed or taped on to produce the seal.<br><br>
 
                Maxell Airtight Products (M.A.P.) has been a major contributer in the construction industry by creating products with incredible efficiency, workability, and environmental impacts from their design to their produciton and sale. 
             </p>
             <button class="solid rebar-contact" onclick="location.href='#valley-form'">
                 GET 10% REBATE
             </button>
+        </div>
+    </section>
+
+    <section id="benefits">
+        <div class="container">
+            <h2><span>Benefits</span> of using Maxell Airtight Products</h2>
+            <ul>
+                <li>No nailing or needing to be taped on to use.</li>
+                <li>Grommet is <strong>ALL</strong> rubber and has a <strong>self-adhesive peel.</strong> and stick backing that requires only one step to install.</li>
+                <li>Saves on time and labor.</li>
+                <li>Significantly less waste.</li>
+            </ul>
         </div>
     </section>
 
@@ -326,7 +340,7 @@
                 </div>
                 <div class="card-info container container2">
                     <h3>Recieve a 10% Manufacture Rebate</h3>
-                    <p>Apply for a 10% rebate when you make a purchase of <strong>$2,000</strong> or more on Maxell products <strong>only</strong> at Valley Construction Supply.
+                    <p>Apply for a 10% rebate when you make a purchase of <strong>$700</strong> or more on Maxell products <strong>only</strong> at Valley Construction Supply. This rebate only applies to your initial 3 orders placed at VCS. 
                     </p>
                     <h4>How to recieve the rebate:</h4>
                     <ol>
