--- a/html/map-system.html
+++ b/html/map-system.html
@@ -243,7 +243,7 @@
     <section id="about-rebar" class="container container2 pipe">
         <div class="rebar-group group2">
             <h2><span>Pipe & Wall</span> Sealing Products </h2>
-            <p>Valley also carries the Maxell line of pipe and wall sealer products that creates an air-tight and waterproof adhesive sheet to be applied to pipes that pass through building's walls and to the outside.<br><br>
+            <p>Valley Construction Supply also carries the Maxell line of pipe and wall sealer products that creates an air-tight and waterproof adhesive sheet to be applied to pipes that pass through building's walls and to the outside.<br><br>
             </p>
             <ol>
                 <li>There is pipe penetration through the wall.</li>
@@ -365,16 +365,19 @@
                 <span class="restrictions">Restrictions:</span>
                 <ul>
                     <li>Full box quantities only.  Up to 5 boxes at a time for the grommet and 3 boxes for the tape. </li>
-                    <li><strong>MUST</strong> be purchased from Valley Construction</li>
+                    <li><strong>MUST</strong> be purchased from Valley Construction Supply</li>
                 </ul>
                 <h3 class="contact-topper"><span>Rebate</span> Request Form</h3>
                 
-                    <input aria-label="name" name="name" placeholder="Your name" type="text" tabindex="1" required>
+                    <input aria-label="name" name="name" placeholder="Your full name" type="text" tabindex="1" required>
                     <input aria-label="company name" name="company" placeholder="Your Company" type="text" tabindex="1" required>
                     <input aria-label="email" name="email" placeholder="Your Email Address" type="email" tabindex="2" required>
                     <input aria-label="phone number" name="phone" placeholder="Your Phone Number" type="tel" tabindex="3" required>
                     <label for="job">What type of contractor are you?:</label>
                     <select id="job" name="cars" tabindex="4">
+                        <option value="none" selected disabled hidden>
+                            Select an Option
+                        </option>
                         <option value="hvac">HVAC</option>
                         <option value="plumbing">Plumbing</option>
                         <option value="electrical">Electrical</option>
