chnaged some text

--- a/html/simpson-strong-tie.html
+++ b/html/simpson-strong-tie.html
@@ -193,7 +193,7 @@
             <img src="/images/valley-and-simpson.png" alt="">
         </div>
         <div class="rebar-group">
-            <h2><span>Seattle's</span> Simpson Strong Tie supplier since 1990 </h2>
+            <h2><span>Puget Sound's</span> Simpson Strong Tie supplier since 1994</h2>
             <p>Throughout the past 30+ years, Valley and Simpson Strong-Tie have developed a powerful relationship. We at Valley were the first-ever supplier of Simpson Strong-tie products within the Seattle marketplace. With that, our businesses began to evolve in parallel to each other as our relationship continued to grow even stronger over the decades. <br><br>
 
             Simpson Strong-Tie is one of the most trusted names in the connector industry, and is currently a leader in reliable, code-compliant building products. At Valley, we pride ourselves as a premier supplier as we carry the largest range of Simpson Strong-Tie products in Seattle. We are currently one of Simpson’s largest independent distributors -and we’re damn proud of it.
