fixed mobile nav stuff

--- a/html/simpson-strong-tie.html
+++ b/html/simpson-strong-tie.html
@@ -14,8 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Valley Construction Supply can provide rebar fabrication for your residential and commercial jobs. Using the ASA standard rebar bend list, we can cut and bend rebar to fill your custom orders.">
-    <meta name="keywords" content="seattle rebar fabrication, rebar fabrication facility, rebar delivery seattle, rebar estimates seattle, rebar detailing seattle, rebar seattle">
+    <meta name="description" content="We at Valley were the first-ever supplier of Simpson Strong-tie products within the Seattle marketplace. With that, our businesses began to evolve in parallel to each other as our relationship continued to grow even stronger over the decades.">
+    <meta name="keywords" content="simpson strong tie products, seismic retrofit simpson strong tie, framing materials simpson strong tie, simpson hardware dealer, valve engineering dealer, concrete anchoring simpson strong tie, anchor bolts supplier, brick reinforcement solutions, masonry reinforcement, simpson supplier seattle wa, simpson supplier, simpson strong tie supplier">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -145,9 +145,10 @@
                 <li class="services-li"></i><a class="s-link active-menu" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link" href="services.html">OUR PRODUCTS</a></li>
-                        <li><a id="contact-width-change" class="service-drop-link active-sub-menu" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="materials.html">BUILDING MATERIALS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link active-sub-menu" href="simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
