--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                         <li><a  class="service-drop-link" href="html/rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a  class="service-drop-link" href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a  class="service-drop-link" href="html/materials.html">BUILDING MATERIALS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
                     </ul>
                 </li>
                 <li><a href="html/promotions.html">PROMOTIONS</a></li>
