--- a/html/energy-code.html
+++ b/html/energy-code.html
@@ -109,6 +109,7 @@
                         <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link"href="materials.html">BUILDING MATERIALS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
