--- a/html/promotions.html
+++ b/html/promotions.html
@@ -147,6 +147,7 @@
                         <li><a class="contact-width-change service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a class="contact-width-change service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a class="contact-width-change service-drop-link" href="materials.html">BUILDING MATERIALS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
                     </ul>
                 </li>
                 <li><a class="active-menu active-menu-main" href="promotions.html">PROMOTIONS</a></li>
