--- a/html/simpson-strong-tie.html
+++ b/html/simpson-strong-tie.html
@@ -200,7 +200,7 @@
             Simpson Strong-Tie is one of the most trusted names in the connector industry, and is currently a leader in reliable, code-compliant building products. At Valley, we pride ourselves as a premier supplier as we carry the largest range of Simpson Strong-Tie products in Seattle. We are currently one of Simpson’s largest independent distributors -and we’re damn proud of it.
             </p>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
-                CONTACT VALLEY
+                CONTACT VCS
             </button>
         </div>
     </section>
