added pressure treated lumber

--- a/html/materials.html
+++ b/html/materials.html
@@ -284,6 +284,7 @@
                     <li>Nervoustral/Sill Sealer</li>
                     <li>Fabricated Hangers</li>
                     <li>Pocket Door Frames</li>
+                    <li>Pressure Treated Lumber</li>
                 </ul>
             </li>
             <li class="list-header">SIDING
