--- a/html/simpson-strong-tie.html
+++ b/html/simpson-strong-tie.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="We at Valley were the first-ever supplier of Simpson Strong-tie products within the Seattle marketplace. With that, our businesses began to evolve in parallel to each other as our relationship continued to grow even stronger over the decades.">
+    <meta name="description" content="Valley Construction Supply is the premier supplier of all Simpson String Tie products including seismic retrofits, framing hardware, concrete anchoring, and more.">
     <meta name="keywords" content="simpson strong tie products, seismic retrofit simpson strong tie, framing materials simpson strong tie, simpson hardware dealer, valve engineering dealer, concrete anchoring simpson strong tie, anchor bolts supplier, brick reinforcement solutions, masonry reinforcement, simpson supplier seattle wa, simpson supplier, simpson strong tie supplier">
 
     <!-- Favicons -->
