added nds pages

--- a/html/nds-residential-drainage-products.html
+++ b/html/nds-residential-drainage-products.html
@@ -14,8 +14,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Valley Construction Supply is the premier supplier of all Simpson String Tie products including seismic retrofits, framing hardware, concrete anchoring, and more.">
-    <meta name="keywords" content="simpson strong tie products, seismic retrofit simpson strong tie, framing materials simpson strong tie, simpson hardware dealer, valve engineering dealer, concrete anchoring simpson strong tie, anchor bolts supplier, brick reinforcement solutions, masonry reinforcement, simpson supplier seattle wa, simpson supplier, simpson strong tie supplier">
+    <meta name="description" content="Valley Construction Supply is the premier supplier for Residential NDS Drainage Solutions such as catch basins, trench drain systems, channel drains, EZ-Flow, Flo-Well, and more.">
+    <meta name="keywords" content="ezflow supplier, nds ezflow supplier, french drain suppler, gravel free drain, flo-well products, nds flo well, nds dry well, dry well supplier, gravel free dry well, nds channel drains, micro channel drain supplier, driveway drains, pool drains, patio drains, trough drains supplier, NDS Channel and Trench Drain Systems
+    ">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -41,6 +42,8 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
     <link rel="stylesheet" href="/css/simpson.css">
+    <link rel="stylesheet" href="/css/nds-pro-series.css">
+    <link rel="stylesheet" href="/css/nds-residential.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -53,7 +56,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Simpson Strong Tie Products  | Seattle WA</title>
+    <title>NDS Residential Draining Solutions Supplier | Seattle WA</title>
 </head>
 
 <body>
@@ -142,7 +145,7 @@
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
-                <li class="services-li"></i><a class="s-link active-menu" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
+                <li class="services-li"></i><a class="s-link" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link" href="services.html">OUR PRODUCTS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
@@ -186,7 +189,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>Simpson Strong Tie Products</h1>
+                <h1>NDS Residetial Draining Solutions</h1>
                 
             </div>
         </div>
@@ -198,64 +201,45 @@
     <!-- ============================================ -->
 
     <section id="about-rebar" class="container container2 container3">
-        <div aria-hidden="true" class="image-square">
-            <img src="/images/valley-and-simpson.png" alt="">
+        <div aria-hidden="true" id="top-square" class="image-square">
+            <img src="/images/nds-catch-basin.png" alt="">
         </div>
         <div class="rebar-group">
-            <h2><span>Puget Sound's</span> Simpson Strong Tie supplier since 1994</h2>
-            <p>Throughout the past 30+ years, Valley and Simpson Strong-Tie have developed a powerful relationship. We at Valley were the first-ever supplier of Simpson Strong-tie products within the Seattle marketplace. With that, our businesses began to evolve in parallel to each other as our relationship continued to grow even stronger over the decades. <br><br>
-
-            Simpson Strong-Tie is one of the most trusted names in the connector industry, and is currently a leader in reliable, code-compliant building products. At Valley, we pride ourselves as a premier supplier as we carry the largest range of Simpson Strong-Tie products in Seattle. We are currently one of Simpson’s largest independent distributors -and we’re damn proud of it.
+            <h2><span>NDS</span> Catch Basins</h2>
+            <p>Catch basin drains by NDS are a simple and highly effective solution to protect your property against water damage caused by excess rainwater or irrigation. NDS makes a wide range of catch basins for both residential and light commercial applications, and we at Valley Construction Supplies have them all.
             </p>
+            <h4>NDS drainage basins features:</h4>
+            <ul>
+                <li>
+                    Ideal for patio drainage, downspout water control, and yard and garden drainage.
+                </li>
+                <li>
+                    Can be installed in a series or as a standalone point drainage system.
+                </li>
+                <li>
+                    Provide a durable and affordable solution to your drainage problems.
+                </li>
+                <li>
+                    Drainage box can minimize issues with drainage.
+                </li>
+                <li>
+                    Less maintenance.
+                </li>
+                <li>
+                    Longer lasting durability.
+                </li>
+            </ul>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VCS
             </button>
         </div>
     </section>
 
-    <!-- ============================================ -->
-    <!--                     REBAR                    -->
-    <!-- ============================================ -->
-
-    <section id="phrases">
-        <div class="container">
-            <div class="item">
-                <h2>Full Line Simpson Strong-Tie Hardware Dealer</h2>
-                <p>
-                    With a full line of Simpson Strong-Tie products, we are the number one hardware dealer in the beautiful city of Seattle. Find everything you need and more, right here at Valley Construction Supply. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Large Standing Inventory</h2>
-                <p>
-                    Offering up leading brands of quality products, backed by the very best in after-sales care and attention is what Valley Construction Supply is all about. Our large standing inventory, along with our collective reputation is built around a set of core principles like being accountable, available, and offering up value for money at all times. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Hardware for All Framing Situations</h2>
-                <p>
-                    No matter your framing situation, we have the hardware available to suit your needs. Whether you require hardware for seismic retrofit or new construction, we have the tools you need to get the job done, and done right. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Early Project “Valve Engineering” Capability</h2>
-                <p>
-                    We provide early project valve engineering capability to control the flow of fluids, weather liquids, gas, or slurries in pipes or other enclosures. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Experienced Knowledgeable Staff </h2>
-                <p>
-                    Our experienced and highly knowledgeable staff are ready and available to answer any and all questions you may have. We adhere to the highest standard of ethical practices and are committed to ensuring that all of your needs are met. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Custom Hardware and Access to Rebar</h2>
-                <p>
-                    Whether you require customised hardware or access to rebar, we at Valley Construction Supplies can help. Get in touch with us today to advise us of your specific requirements, and we’ll do whatever we can to help. 
-                </p>
-            </div>
-        </div>
+    <section id="tagline">
+        <h2>NDS Residential Catch Basins & Drainage Boxes</h2>
+        <p>
+            AtCatch basins, or drainage basins, help maintain proper drainage by catching debris before it can clog up downstream pipe systems. The water is collected on the bottom of a box while solids settle to the top. The connected pipe then directs water away from your home and into a sewage plant or stream. 
+        </p>
     </section>
 
     <!-- ============================================ -->
@@ -264,56 +248,68 @@
 
     <section id="about-rebar" class="container container2 pipe pipe2">
         <div class="rebar-group group2">
-            <h2><span>Seismic</span> Retrofit</h2>
+            <h2><span>EZ-Flow</span> French Drain</h2>
             <p>
-                <strong>Seismic retrofit</strong> revolves around reinforcing buildings to withstand earthquakes. With it, both the interior and exterior of a building will move as one rather than separately, ultimately preserving the overall structure. 
+                The NDS Ezflow is a revolutionary gravel-free French drain product. This innovative solution to gravel-free drains provides up to 50% of labor savings over traditional systems, while being a key component in the NDS S5 sustainable surface water management system. When it comes to sustainable surface water management, it can be installed as an alternative to more expensive full trenching designs - saving you time and money.
             </p>
-            <p>
-                As we have seen in earthquakes throughout the years, some homes hold up better than others. Each building is different, and it all comes down to one major factor -how they were originally built. 
-            </p>
-            <p>
-                Those who own older homes (particularly those built on raised foundations) are susceptible to earthquake damage. However, homes constructed after the year 1985 were built to stricter standards. Those with older homes must ensure they carry out seismic retrofit to ensure their home will survive a seismic event. 
-            </p>
+            <h4>Benefits of Using EZ Flow</h4>
+            <ul>
+                <li>
+                    <strong>Fewer Resources to Install:</strong> EZflow is lightweight and can be carried by hand around the job site.
+                </li>
+                <li>
+                    <strong>Engineered with Consistency In Mind:</strong> EZflow is made up of geosynthetic aggregate. With an engineered design, each piece of EZflow offers the same performance. 
+                </li>
+                <li>
+                    <strong>Clean:</strong> EZ flow offers a more streamlined installation and treatment space. 
+                </li>
+                <li>
+                    <strong>Environmentally Friendly:</strong> EZflow is manufactured from recycled materials that are better for our planet. 
+                </li>
+                <li>
+                    <strong>Flexibility:</strong> Can be bent, making it an ideal solution for installations that require the drain field to be placed around landscape challenges - like between trees.
+
+                </li>
+            </ul>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VALLEY
             </button>
         </div>
-        <img id="group2" src="/images/old-home.jpg" alt="rebar fabrication facility" width="450px">
-    </section>
-
-    <section id="phrases">
-        <div class="container">
-            <div class="item">
-                <h2>Pre - 1985 homes are at risk</h2>
-                <p>
-                    Those who own older homes (particularly those built on raised foundations) are susceptible to earthquake damage. However, homes constructed after the year 1985 were built to stricter standards. Those with older homes must ensure they carry out seismic retrofit to ensure their home will survive a seismic event. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Preserve your structure's integrity</h2>
-                <p>
-                    Simpson Strong-Tie products boast the quality to strengthen an older home's structural frame, and provide solutions for ultimate protection. In addition to this, Simpson Strong-Tie also meets the prescriptive minimum standards of the 2018 International Existing Building Code (IEBC,) and are intended to improve the ability of structures to withstand seismic forces. 
-                </p>
-            </div>
-        </div>
+        <img id="group2" src="/images/ezflow.png" alt="rebar fabrication facility" width="450px">
     </section>
 
     <!-- ============================================ -->
     <!--                     REBAR                    -->
     <!-- ============================================ -->
 
-    <section id="about-rebar" class="container container2 pipe anchoring">
-        <img id="group2" src="/images/anchoring.jpg" alt="rebar fabrication facility" width="450px">
-        <div class="rebar-group group2">
-            <h2><span>Concrete</span> Anchoring</h2>
-            <p>
-                <strong>Anchor bolts</strong> are used to connect structural and non-structural elements to concrete. The connection can be made by a variety of different components, and Simpson Strong-Tie offers them all. 
+    <section id="about-rebar" class="container container2 container3">
+        <div aria-hidden="true" id="top-square" class="image-square">
+            <img src="/images/flo-well.png" alt="">
+        </div>
+        <div class="rebar-group">
+            <h2><span>Dry Well Drainage</span> Systems and Kits</h2>
+            <p>NDS Flo-Well is an innovative way to manage stormwater runoff. With a gravel-free alternative that can be used independently or in conjunction with other systems, this dry well will have your property prepared for the next big rainstorm. Units can be connected in series or stacked to meet various project needs and accommodate higher volumes of water.
             </p>
-            <p>
-                Simpson Strong-Tie helps you succeed by providing you with innovative products, field support, and full-service engineering. At Valley, we offer a complete array of mechanical and adhesive anchors and tools for concrete and masonry applications. As with all of our Simpson Strong-Tie supplies, the anchor systems we hold in stock have passed the <strong>high performance and quality standards</strong> that are expected of Simpson Strong-Tie – and include the trusted level of service you've come to rely on. 
-            </p>
+            <h4>The Benefits of Flo-Well Engineered Dry Well:</h4>
+            <ul>
+                <li>
+                    <strong>250% More Detention Volume:</strong> Each dry well tank holds up to 50 gallons of detention volume per unit, and they can be connected together or stacked on top of each other depending on the project.
+                </li>
+                <li>
+                    <strong>Reduced Time:</strong> The dry well gravel-free solution eliminates the need for piping systems to transport water. 
+                </li>
+                <li>
+                    <strong>Flo-Well Engineered Dry Well:</strong> Can be used independently or as part of a more extensive system to collect and detain stormwater, allowing for groundwater recharge.
+                </li>
+                <li>
+                    <strong>Cost-effective:</strong> More cost-effective than larger piping systems that transport stormwater to discharge points.
+                </li>
+                <li>
+                    <strong>Efficient:</strong> Faster and easier clean-up than traditional dry well; no gravel to ding blades of lawn mowers.
+                </li>
+            </ul>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
-                CONTACT VALLEY
+                CONTACT VCS
             </button>
         </div>
     </section>
@@ -323,18 +319,12 @@
     <!-- ============================================ -->
 
     <section id="rebar-stats">
-        <h2 class="container"><span>Seismic</span> Solutions From Simpson Strong Tie for any Project</h2>
+        <h2 class="container"><span>Innovative</span> Drainage Solutions for Residential Projects</h2>
         <div class="container stat-group">
             <div class="stat-item">
-                <h3>Masonry Reinforcement </h3>
+                <h3>Drainage Applications</h3>
                 <p>
-                    Improves the structural performance of any masonry walls as it provides additional resistance to heavy lateral loads.  Our Simpson Strong-Tie products offer efficient solutions for the structural Reinforcement or retrofit of ageing, damaged, or overloaded masonry structures. 
-                </p>
-            </div>
-            <div class="stat-item">
-                <h3>Framing Hardware </h3>
-                <p>
-                    Framing Hardware refers to any products and tools used for new construction, tenant improvements or additions, and of course seismic retrofit. You can find everything you need and more right here at Valley Construction in Seattle. 
+                    The many applications for drainage solutions include landscape drains, rood run-off drains, basement or crawlspace dewatering, retaining wall drains, interceptor drains, and curtain drains.
                 </p>
             </div>
         </div>
