--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                         <li><a  class="service-drop-link" href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a  class="service-drop-link" href="html/materials.html">BUILDING MATERIALS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="/html/simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/map-system.html">MAXWELL AIRTIGHT PROUDUCTS</a></li>
                     </ul>
                 </li>
                 <li><a href="html/promotions.html">PROMOTIONS</a></li>
@@ -173,6 +174,13 @@
                         <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
                         <li><a  class="contact-drop-link" href="html/contact.html">CONTACT VCS</a></li>
                         <li><a  class="contact-drop-link" href="html/apply.html">APPLY FOR CREDIT</a></li>
+                    </ul>
+                </li>
+                <li class="contact-li"><a class="c-link active-menu" href="/html/nds.html">NDS</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
+                    <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="/html/nds.html">NDS STORMCHAMBER</a></li>
+                        <li><a  class="contact-drop-link" href="/html/nds-residential-drainage-products.html">RESIDENTIAL</a></li>
+                        <li><a  class="contact-drop-link" href="/html/nds-commercial-products.html">COMMERCIAL</a></li>
                     </ul>
                 </li>
             </ul>
