--- a/html/energy-code.html
+++ b/html/energy-code.html
@@ -110,6 +110,7 @@
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link"href="materials.html">BUILDING MATERIALS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/map-system.html">MAXWELL AIRTIGHT PROUDUCTS</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
@@ -118,6 +119,13 @@
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
+                    </ul>
+                </li>
+                <li class="contact-li"><a class="c-link active-menu" href="/html/nds.html">NDS</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
+                    <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="/html/nds.html">NDS STORMCHAMBER</a></li>
+                        <li><a  class="contact-drop-link" href="/html/nds-residential-drainage-products.html">RESIDENTIAL</a></li>
+                        <li><a  class="contact-drop-link" href="/html/nds-commercial-products.html">COMMERCIAL</a></li>
                     </ul>
                 </li>
             </ul>
