--- a/html/nds-commercial-products.html
+++ b/html/nds-commercial-products.html
@@ -14,8 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Valley Construction Supply is the premier supplier of all Simpson String Tie products including seismic retrofits, framing hardware, concrete anchoring, and more.">
-    <meta name="keywords" content="simpson strong tie products, seismic retrofit simpson strong tie, framing materials simpson strong tie, simpson hardware dealer, valve engineering dealer, concrete anchoring simpson strong tie, anchor bolts supplier, brick reinforcement solutions, masonry reinforcement, simpson supplier seattle wa, simpson supplier, simpson strong tie supplier">
+    <meta name="description" content="drainage products, nds dura slope supplier, nds filcoten supplier, nds stormwater supplier, commercial drainage products, stormTech supplier, underground stormwater storage, filcotentrench drian, nds filcoten, Dura slope trench drain, NDS dura slope">
+    <meta name="keywords" content="Valley Construction Supply provides all NDS drainage solution products for commercial projects. We carry Dura Slope, Filcoten Trench Drain, and NDS Stormwater solutions.">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -41,6 +41,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
     <link rel="stylesheet" href="/css/simpson.css">
+    <link rel="stylesheet" href="/css/nds-pro-series.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -53,7 +54,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Simpson Strong Tie Products  | Seattle WA</title>
+    <title>NDS Commercial Draining Solutions Supplier | Seattle WA</title>
 </head>
 
 <body>
@@ -142,7 +143,7 @@
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
-                <li class="services-li"></i><a class="s-link active-menu" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
+                <li class="services-li"></i><a class="s-link" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link" href="services.html">OUR PRODUCTS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
@@ -186,7 +187,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>Simpson Strong Tie Products</h1>
+                <h1>NDS Commercial Draining Solutions</h1>
                 
             </div>
         </div>
@@ -198,64 +199,45 @@
     <!-- ============================================ -->
 
     <section id="about-rebar" class="container container2 container3">
-        <div aria-hidden="true" class="image-square">
-            <img src="/images/valley-and-simpson.png" alt="">
+        <div aria-hidden="true" id="top-square" class="image-square">
+            <img src="/images/nds-pro-series.png" alt="">
         </div>
         <div class="rebar-group">
-            <h2><span>Puget Sound's</span> Simpson Strong Tie supplier since 1994</h2>
-            <p>Throughout the past 30+ years, Valley and Simpson Strong-Tie have developed a powerful relationship. We at Valley were the first-ever supplier of Simpson Strong-tie products within the Seattle marketplace. With that, our businesses began to evolve in parallel to each other as our relationship continued to grow even stronger over the decades. <br><br>
-
-            Simpson Strong-Tie is one of the most trusted names in the connector industry, and is currently a leader in reliable, code-compliant building products. At Valley, we pride ourselves as a premier supplier as we carry the largest range of Simpson Strong-Tie products in Seattle. We are currently one of Simpson’s largest independent distributors -and we’re damn proud of it.
+            <h2><span>NDS Pro Series</span> Channel Drains</h2>
+            <p>The NDS Pro Series Channel Drains are a lightweight, modular system with interlocking joints that offer quick and easy connections. Ideal for commercial applications, when you're in need of water drainage solutions for your business premises, these polylok channel drains will do the trick
             </p>
+            <h4>Features Include:</h4>
+            <ul>
+                <li>
+                    Side ribs and thick channel walls for added strength
+                </li>
+                <li>
+                    Withstand any load put on them
+                </li>
+                <li>
+                    Channels can be quickly snapped together for long runs and divided into smaller sections
+                </li>
+                <li>
+                    Ensures flexibility to meet your needs
+                </li>
+                <li>
+                    3"-, 5-inch-, 8-inch,- or 12-inch widths
+                </li>
+                <li>
+                    Handle heavier traffic loads of up to Class C
+                </li>
+            </ul>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VCS
             </button>
         </div>
     </section>
 
-    <!-- ============================================ -->
-    <!--                     REBAR                    -->
-    <!-- ============================================ -->
-
-    <section id="phrases">
-        <div class="container">
-            <div class="item">
-                <h2>Full Line Simpson Strong-Tie Hardware Dealer</h2>
-                <p>
-                    With a full line of Simpson Strong-Tie products, we are the number one hardware dealer in the beautiful city of Seattle. Find everything you need and more, right here at Valley Construction Supply. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Large Standing Inventory</h2>
-                <p>
-                    Offering up leading brands of quality products, backed by the very best in after-sales care and attention is what Valley Construction Supply is all about. Our large standing inventory, along with our collective reputation is built around a set of core principles like being accountable, available, and offering up value for money at all times. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Hardware for All Framing Situations</h2>
-                <p>
-                    No matter your framing situation, we have the hardware available to suit your needs. Whether you require hardware for seismic retrofit or new construction, we have the tools you need to get the job done, and done right. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Early Project “Valve Engineering” Capability</h2>
-                <p>
-                    We provide early project valve engineering capability to control the flow of fluids, weather liquids, gas, or slurries in pipes or other enclosures. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Experienced Knowledgeable Staff </h2>
-                <p>
-                    Our experienced and highly knowledgeable staff are ready and available to answer any and all questions you may have. We adhere to the highest standard of ethical practices and are committed to ensuring that all of your needs are met. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Custom Hardware and Access to Rebar</h2>
-                <p>
-                    Whether you require customised hardware or access to rebar, we at Valley Construction Supplies can help. Get in touch with us today to advise us of your specific requirements, and we’ll do whatever we can to help. 
-                </p>
-            </div>
-        </div>
+    <section id="tagline">
+        <h2>NDS FILCOTEN® Trench Drain Products</h2>
+        <p>
+            At Valley, we offer a complete line of catch basins, grates, sewer and drain fittings, and channel drains such as the Dura Slope trench drain system. Speak to one of our experts to learn more. 
+        </p>
     </section>
 
     <!-- ============================================ -->
@@ -264,56 +246,62 @@
 
     <section id="about-rebar" class="container container2 pipe pipe2">
         <div class="rebar-group group2">
-            <h2><span>Seismic</span> Retrofit</h2>
+            <h2><span>NDS</span> Dura Slope Products</h2>
             <p>
-                <strong>Seismic retrofit</strong> revolves around reinforcing buildings to withstand earthquakes. With it, both the interior and exterior of a building will move as one rather than separately, ultimately preserving the overall structure. 
+                NDS Dura Slope is a high-quality, dependable trench drain system that you can count on for your drainage needs. Whether you’re looking for an effective solution for driveways, sports facilities, parking areas, warehouses, loading docks, pools, or any other surface runoff interception point - the NDS Dura Slope has got you covered.
             </p>
-            <p>
-                As we have seen in earthquakes throughout the years, some homes hold up better than others. Each building is different, and it all comes down to one major factor -how they were originally built. 
-            </p>
-            <p>
-                Those who own older homes (particularly those built on raised foundations) are susceptible to earthquake damage. However, homes constructed after the year 1985 were built to stricter standards. Those with older homes must ensure they carry out seismic retrofit to ensure their home will survive a seismic event. 
-            </p>
+            <h4>Benefits of Dura Slope</h4>
+            <ul>
+                <li>
+                    <strong>Solutions for Any Size:</strong> The Dura Slope Trench Drain System is offered in both neutral and pre-sloped sections. you can choose your system based on your individual requirements
+                </li>
+                <li>
+                    <strong>Versatile and Durable:</strong> NDS Dura Slope Trench Drain handles large capacity volumes and solutions up to a Class D load rating
+                </li>
+                <li>
+                    <strong>Lightweight and Easy to Install:</strong> Made from HDPE, Dura Slope is a plastic channel drain that features an interlocking tongue and groove joints to secure alignment and ensure straight channel runs.
+                </li>
+            </ul>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
                 CONTACT VALLEY
             </button>
         </div>
-        <img id="group2" src="/images/old-home.jpg" alt="rebar fabrication facility" width="450px">
-    </section>
-
-    <section id="phrases">
-        <div class="container">
-            <div class="item">
-                <h2>Pre - 1985 homes are at risk</h2>
-                <p>
-                    Those who own older homes (particularly those built on raised foundations) are susceptible to earthquake damage. However, homes constructed after the year 1985 were built to stricter standards. Those with older homes must ensure they carry out seismic retrofit to ensure their home will survive a seismic event. 
-                </p>
-            </div>
-            <div class="item">
-                <h2>Preserve your structure's integrity</h2>
-                <p>
-                    Simpson Strong-Tie products boast the quality to strengthen an older home's structural frame, and provide solutions for ultimate protection. In addition to this, Simpson Strong-Tie also meets the prescriptive minimum standards of the 2018 International Existing Building Code (IEBC,) and are intended to improve the ability of structures to withstand seismic forces. 
-                </p>
-            </div>
-        </div>
+        <img id="group2" src="/images/dura-slope.png" alt="rebar fabrication facility" width="450px">
     </section>
 
     <!-- ============================================ -->
     <!--                     REBAR                    -->
     <!-- ============================================ -->
 
-    <section id="about-rebar" class="container container2 pipe anchoring">
-        <img id="group2" src="/images/anchoring.jpg" alt="rebar fabrication facility" width="450px">
-        <div class="rebar-group group2">
-            <h2><span>Concrete</span> Anchoring</h2>
-            <p>
-                <strong>Anchor bolts</strong> are used to connect structural and non-structural elements to concrete. The connection can be made by a variety of different components, and Simpson Strong-Tie offers them all. 
+    <section id="about-rebar" class="container container2 container3">
+        <div aria-hidden="true" id="top-square" class="image-square">
+            <img src="/images/filcoten.png" alt="">
+        </div>
+        <div class="rebar-group">
+            <h2><span>NDS Filcoten</span> Trench Drain</h2>
+            <p>When it comes to draining driveways or outdoor areas, Filcoten trench drains provide an excellent option to remove excess water from a site. However, it's one option that many commercial business owners aren't aware of. 
             </p>
+            <h4>Features Include:</h4>
+            <ul>
+                <li>
+                    Elongated surface for water to drain from a specific area
+                </li>
+                <li>
+                    Works for driveways, beneath an un-guttered roof edges, sidewalks, or similar spaces where water tends to collect
+                </li>
+                <li>
+                    Superior impact resistance making it less susceptible to cracking and breaking during transport
+                </li>
+                <li>
+                    Temperature, frost, and UV-resistant, reducing contraction and expansion
+                </li>
+            </ul>
             <p>
-                Simpson Strong-Tie helps you succeed by providing you with innovative products, field support, and full-service engineering. At Valley, we offer a complete array of mechanical and adhesive anchors and tools for concrete and masonry applications. As with all of our Simpson Strong-Tie supplies, the anchor systems we hold in stock have passed the <strong>high performance and quality standards</strong> that are expected of Simpson Strong-Tie – and include the trusted level of service you've come to rely on. 
+                In addition to this, the NDS Filcoten trench drain boasts both strength and beauty. Its fiber-reinforced concrete is able to withstand high load capacities, which makes it an ideal choice for commercial and industrial applications like parking lots, factories, and garages. Moreover, the sleek design can be easily used in public places made for pedestrians -like railway stations and residential areas. 
+
             </p>
             <button class="solid rebar-contact" onclick="location.href='contact.html'">
-                CONTACT VALLEY
+                CONTACT VCS
             </button>
         </div>
     </section>
@@ -323,18 +311,12 @@
     <!-- ============================================ -->
 
     <section id="rebar-stats">
-        <h2 class="container"><span>Seismic</span> Solutions From Simpson Strong Tie for any Project</h2>
+        <h2 class="container"><span>Low Impact </span> Commercial Stormwater Solutions for The Puget Sound</h2>
         <div class="container stat-group">
             <div class="stat-item">
-                <h3>Masonry Reinforcement </h3>
+                <h3>NDS StormChamber</h3>
                 <p>
-                    Improves the structural performance of any masonry walls as it provides additional resistance to heavy lateral loads.  Our Simpson Strong-Tie products offer efficient solutions for the structural Reinforcement or retrofit of ageing, damaged, or overloaded masonry structures. 
-                </p>
-            </div>
-            <div class="stat-item">
-                <h3>Framing Hardware </h3>
-                <p>
-                    Framing Hardware refers to any products and tools used for new construction, tenant improvements or additions, and of course seismic retrofit. You can find everything you need and more right here at Valley Construction in Seattle. 
+                    Storm chambers are a low-impact solution to stormwater retention, detention, and reuse that helps counteract drought conditions by maintaining the flow of groundwater. The storage system is modular and has been designed with maximized volume in mind so it can handle any amount of water retained or used. 
                 </p>
             </div>
         </div>
