--- a/html/nds.html
+++ b/html/nds.html
@@ -142,13 +142,14 @@
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
-                <li class="services-li"></i><a class="s-link active-menu" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
+                <li class="services-li"></i><a class="s-link" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link" href="services.html">OUR PRODUCTS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link active-sub-menu" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="materials.html">BUILDING MATERIALS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/map-system.html">MAXWELL AIRTIGHT PROUDUCTS</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
@@ -158,6 +159,13 @@
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
+                    </ul>
+                </li>
+                <li class="contact-li"><a class="c-link active-menu" href="/html/nds.html">NDS</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
+                    <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="/html/nds.html">NDS STORMCHAMBER</a></li>
+                        <li><a  class="contact-drop-link" href="nds-residential-drainage-products.html">RESIDENTIAL</a></li>
+                        <li><a  class="contact-drop-link" href="/html/nds-commercial-products.html">COMMERCIAL</a></li>
                     </ul>
                 </li>
             </ul>
