fixed active nav

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -160,7 +160,7 @@
                         <li><a class="contact-width-change contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
                 </li>
-                <li class="contact-li"><a class="c-link active-menu" href="/html/nds.html">NDS</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
+                <li class="contact-li"><a class="c-link" href="/html/nds.html">NDS</a><i class="fas fa-chevron-down contact-dropdown icon-drop "></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="/html/nds.html">NDS STORMCHAMBER</a></li>
                         <li><a  class="contact-drop-link" href="/html/nds-residential-drainage-products.html">RESIDENTIAL</a></li>
